--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -39,4 +39,16 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.NKCONSULTING_TOKEN }}'
           TARGET_REPOS: |
             nkconsultinglab/query-parser:main
+      - uses: adrianjost/files-sync-action@v2.0.4
+        with:
+          GIT_EMAIL: wiscsoftware@gmail.com
+          FILE_PATTERNS: |
+            ^LICENSE$
+            ^.github/workflows/sync-.*
+            README.md
+            .gitignore
+            src/
+          GITHUB_TOKEN: '${{ secrets.NKCONSULTING_TOKEN }}'
+          TARGET_REPOS: |
+            wiscsoftware/query-parser:main
       - run: echo "🍏 This job's status is ${{ job.status }}."
